--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "async": "^1.5.0",
     "fs-extra": "^0.26.2",
     "glob": "^5.0.15",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "ncp": "^2.0.0"
   },
   "dependencies": {
     "fs-extra": "^0.26.2"
