--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
   "homepage": "https://github.com/sakurashiki/booth_maniax#readme",
   "devDependencies": {
     "async": "^1.5.0",
-    "fs-extra": "^0.26.2",
-    "glob": "^5.0.15",
+    "babel": "^5.8.34",
     "mkdirp": "^0.5.1",
-    "ncp": "^2.0.0"
-  },
-  "dependencies": {
-    "fs-extra": "^0.26.2"
+    "ncp": "^2.0.0",
+    "util": "^0.10.3",
+    "webpack": "^1.12.4"
   }
 }
